Add 400 error page for numberformatexception