@@ -4,12 +4,15 @@ import com.example.recipe.commands.RecipeCommand;
 import com.example.recipe.exceptions.NotFoundException;
 import com.example.recipe.services.RecipeService;
 import lombok.extern.slf4j.Slf4j;
+import org.aspectj.weaver.ast.Not;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.stereotype.Service;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
+
 
 @Slf4j
 @Service
@@ -22,7 +25,7 @@ public class RecipeController {
     @GetMapping
     @RequestMapping("/recipe/{id}/show")
     public String showRecipeById(@PathVariable String id, Model model){
-        model.addAttribute("recipe",recipeService.findById(new Long(id)));
+        model.addAttribute("recipe",recipeService.findById(Long.valueOf(id)));
 
         return "recipe/show";
     }
@@ -58,13 +61,27 @@ public class RecipeController {
         return "redirect:/";
     }
 
+    @ResponseStatus(HttpStatus.NOT_FOUND)
     @ExceptionHandler(NotFoundException.class)
     public ModelAndView handleNotFound(Exception exception){
         log.error("Handling not found exception");
+        log.error(exception.getMessage());
         ModelAndView modelAndView=new ModelAndView();
         modelAndView.setViewName("404error");
         modelAndView.addObject("exception", exception);
         return modelAndView;
     }
+
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ExceptionHandler(NumberFormatException.class)
+    public ModelAndView numberFormat(Exception exception){
+        log.error("handling number format exception");
+        log.error(exception.getMessage());
+        ModelAndView modelAndView=new ModelAndView();
+        modelAndView.setViewName("400error");
+        modelAndView.addObject("exception",exception);
+        return modelAndView;
+    }
+
 
 }
